src/objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount after tax per pay check ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentMonth__c</fullName>
        <label>CurrentMonth</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_contribution_bring_tax_benifit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does contribution bring tax benifit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_tax_benifit_realize_really__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does tax benifit realize really?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_End_Date__c</fullName>
        <label>Expense End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Start_Date__c</fullName>
        <label>Expense Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Transaction</label>
        <referenceTo>FinServ__FinancialAccountTransaction__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseHold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HouseHold</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets (HouseHold)</relationshipLabel>
        <relationshipName>Budgets_HouseHold</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_End_Date__c</fullName>
        <label>End month year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Income_Name__c</fullName>
        <label>Nick Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Start_Date__c</fullName>
        <label>Start month year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inflation_Rate__c</fullName>
        <label>Yearly Inflation(%)</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>May_yearly_tax_deduction_allowed__c</fullName>
        <label>May yearly tax deduction allowed($)?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH( Income_Start_Date__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Installment__c</fullName>
        <formula>CASE(Frequency__c, &apos;Monthly&apos;, Amount__c, &apos;Semi Monthly&apos;, Amount__c*2, &apos;Bi-Weekly&apos;, Amount__c*2.16,&apos;Weekly&apos;, Amount__c*4.33,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets (Account)</relationshipLabel>
        <relationshipName>Budgets1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1 - Must Have</fullName>
                </value>
                <value>
                    <fullName>Priority 2</fullName>
                </value>
                <value>
                    <fullName>Priority 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario Id</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Approximate total income tax rate (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>What_of_contribution_bring_tax_benifit__c</fullName>
        <label>What % of contribution bring tax benifit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yearly_growth__c</fullName>
        <label>Yearly growth(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <recordTypes>
        <fullName>Expense_Record_Type</fullName>
        <active>true</active>
        <label>Expense Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Income_Record_Type</fullName>
        <active>true</active>
        <label>Income Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Expense_Record_Type</fullName>
        <active>true</active>
        <label>Scenario Expense Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scenario_Income_Record_Type</fullName>
        <active>true</active>
        <label>Scenario Income Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>